# amazon-invoice-downloader

./: .gitignore  LICENSE  README.md  convert_encoding.py  fix_selector.py  invoice-downloader.code-workspace  pyproject.toml  rewrite_tx_extractor.py  rewrite_waits.py  test2.txt
.github/workflows/: build.yml
apps/worker/src/invoice_downloader/: __main__.py
scripts/: convert_encoding.py  fix_selector.py  rewrite_tx_extractor.py  rewrite_waits.py
src/invoice_downloader/: __main__.py
src/invoice_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
